--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -1,3 +1,21 @@
+/* body background */
+body {
+    background: rgba(128, 128, 128, 0.5);
+    /* backdrop-filter: blur(15px);  */
+    /* 블러 효과 추가 -> 챗봇 fixed 불가*/
+}
+
+.main-container {
+    margin: 2rem auto;
+    width: 90%;
+    background: rgba(128, 128, 128, 0.5); /* 연한 회색 배경 */
+    border-radius: 2rem;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    /* backdrop-filter: blur(15px);  */
+    /* 블러 효과 추가 -> 챗봇 fixed 불가*/
+    padding: 1.5rem;
+}
+
 /* 모든 버튼에 공통 스타일 적용 */
 .btn {
     background-color: white; /* 기본 흰 바탕 */
