--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -1,19 +1,24 @@
 /* body background */
 body {
-    background: rgba(128, 128, 128, 0.5);
-    /* backdrop-filter: blur(15px);  */
-    /* 블러 효과 추가 -> 챗봇 fixed 불가*/
+  background: linear-gradient(to bottom, #d4e4d3, #e9f2e8);
+  margin: 0;
+  /* backdrop-filter: blur(15px);  */
+  /* 블러 효과 추가 -> 챗봇 fixed 불가*/
 }
 
+
 .main-container {
-    margin: 2rem auto;
-    width: 90%;
-    background: rgba(128, 128, 128, 0.5); /* 연한 회색 배경 */
-    border-radius: 2rem;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    /* backdrop-filter: blur(15px);  */
-    /* 블러 효과 추가 -> 챗봇 fixed 불가*/
-    padding: 1.5rem;
+margin: 2rem auto;
+width: 100%; /* 화면의 너비에 맞게 100%로 설정 */
+max-width: 1200px; /* 최대 너비 제한 (필요시 조정 가능) */
+background: rgba(212, 228, 211, 0.8);/* 연한 회색 배경 */
+border-radius: 2rem;
+box-shadow:0 4px 10px rgba(0, 0, 0, 0.1);
+padding: 1.5rem;
+display: flex;
+flex-direction: column;
+min-height: 90vh; /* 높이를 약간 줄여 시각적으로 공간 부여 */
+border: 1px solid rgba(0, 0, 0, 0.05); /* 아주 얇은 외곽선 추가 */
 }
 
 /* 카드 컨테이너 */
