--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -6,7 +6,6 @@ body {
   /* 블러 효과 추가 -> 챗봇 fixed 불가*/
 }
 
-
 .main-container {
 margin: 2rem auto;
 width: 100%; /* 화면의 너비에 맞게 100%로 설정 */
@@ -19,6 +18,21 @@ display: flex;
 flex-direction: column;
 min-height: 90vh; /* 높이를 약간 줄여 시각적으로 공간 부여 */
 border: 1px solid rgba(0, 0, 0, 0.05); /* 아주 얇은 외곽선 추가 */
+}
+
+/* 네브 바 배경 완전 투명화 */
+.navbar.rounded-custom {
+  background-color: transparent !important; /* 배경 투명 */
+  border: none !important; /* 테두리 제거 */
+  box-shadow: none !important; /* 그림자 제거 */
+}
+
+
+/* 드롭다운 메뉴도 완전히 투명하게 설정 */
+.navbar .dropdown-menu {
+  background-color: transparent !important; /* 드롭다운 배경 투명 */
+  border: none !important; /* 테두리 제거 */
+  box-shadow: none !important; /* 그림자 제거 */
 }
 
 /* 카드 컨테이너 */
