--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -125,6 +125,11 @@ border: 1px solid rgba(0, 0, 0, 0.05); /* 아주 얇은 외곽선 추가 */
   background-color: transparent;
   border: none;
 }
+
+.emoji-button {
+  background-color: transparent;
+  border: none;
+}
   /* 비활성화된 버튼 스타일 */
   .btn:disabled {
     background-color: #f5f5f5; /* 비활성화 배경색 */
