--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -131,6 +131,32 @@ border: 1px solid rgba(0, 0, 0, 0.05); /* 아주 얇은 외곽선 추가 */
     box-shadow: 0 0 5px 2px rgba(255, 107, 107, 0.5); /* 포커스 시 강조 그림자 */
   }
 
+  /* 버튼 스타일 */
+  .styled-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 14px 20px; /* 세로를 더 통통하게 */
+    font-size: 14px;
+    font-weight: 750;
+    color: #434040;
+    background: rgba(255, 255, 255, 0.15); /* 살짝 투명한 배경 */
+    backdrop-filter: blur(8px); /* 유리효과 */
+    border-radius: 20px; /* 둥근 모서리 */
+    border: 1px solid rgba(90, 90, 90, 0.226); /* 연한 테두리 */
+    cursor: pointer;
+    gap: 8px; /* 아이콘과 텍스트 간격 */
+    transition: background 0.3s ease, transform 0.2s ease; /* 부드러운 효과 */
+    text-decoration: none;
+    box-shadow:0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+  
+  .styled-button:hover{
+    background: rgba(145, 145, 145, 0.25); /* 조금 더 진한 빨간 배경 */
+    transform: translateY(-1px); /* 살짝 올라가는 효과 */
+    color: #292828; /* 텍스트를 더 진하게 */
+  }
+
   /* 버튼 기본 스타일 */
 .toggle-btn {
   position: relative;
