--- a/movie-pjt/src/assets/styles/main.css
+++ b/movie-pjt/src/assets/styles/main.css
@@ -1,6 +1,6 @@
 /* body background */
 body {
-  background: linear-gradient(to bottom, #d4e4d3, #e9f2e8);
+  background: linear-gradient(to top, #d4e4d3, #e9f2e8);
   margin: 0;
   /* backdrop-filter: blur(15px);  */
   /* 블러 효과 추가 -> 챗봇 fixed 불가*/
@@ -10,7 +10,7 @@ body {
 margin: 2rem auto;
 width: 100%; /* 화면의 너비에 맞게 100%로 설정 */
 max-width: 1500px; /* 최대 너비 제한 (필요시 조정 가능) */
-background: rgba(212, 228, 211, 0.8);/* 연한 회색 배경 */
+background: linear-gradient(to bottom, #d4e4d3, #e9f2e8);/* 연한 회색 배경 */
 border-radius: 2rem;
 box-shadow:0 4px 10px rgba(0, 0, 0, 0.1);
 padding: 1.5rem;
