--- a/movie-pjt/src/assets/styles/signup.css
+++ b/movie-pjt/src/assets/styles/signup.css
@@ -6,6 +6,7 @@
     height: 100vh;
     font-family: Arial, sans-serif;
     background: transparent;
+    padding-bottom: 400px;
 }
 
 .signup-form {
